Fix line height for footer/height and caption overflowing

--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -26,5 +26,7 @@
     }
   }
 
-  .footer-copyright {}
+  .footer-copyright {
+    line-height: 1;
+  }
 }
