--- a/assets/scss/_head.scss
+++ b/assets/scss/_head.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   margin: rem-calc(0 0 $gutter 0);
+  line-height: 1;
 
   @include breakpoint(-xlarge up) {
     margin-bottom: rem-calc($gutter-large);
