--- a/assets/scss/_wp.scss
+++ b/assets/scss/_wp.scss
@@ -43,3 +43,12 @@
     margin-right: auto;
   }
 }
+
+.wp-caption {
+  max-width: 100%;
+
+	img {
+		width: 100%;
+		display: block;
+	}
+}
